kubeyaml/goldpinger.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: goldpinger
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: goldpinger
  namespace: goldpinger
  labels:
    app: goldpinger
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: goldpinger
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app: goldpinger
    spec:
      serviceAccountName: goldpinger-serviceaccount
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: goldpinger
          image: "docker.io/bloomberg/goldpinger:v3.0.0"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            limits:
              memory: 80Mi
            requests:
              cpu: 1m
              memory: 40Mi
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: goldpinger
  namespace: goldpinger
  labels:
    app: goldpinger
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: goldpinger
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-goldpinger
  namespace: goldpinger
spec:
  rules:
    - host: goldpinger.goldpinger.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: goldpinger
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
